fix: avoid IE11 overlapping content

--- a/wp-content/themes/assist-trust/reset.css
+++ b/wp-content/themes/assist-trust/reset.css
@@ -29,13 +29,12 @@ dd {
 }
 
 :root {
-  height: 100%;
   scroll-behavior: smooth;
 }
 
 /* Set core body defaults */
 body {
-  height: 100%;
+  min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
